--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,19 +1,16 @@
-@import "../../vars.css";
-
 .container {
   position: relative;
-  background-color: rgba(12, 12, 12, 0.6);
   border-radius: 15px;
-  padding: 73px;
-  margin-top: 129px;
+  padding: 80px;
+  margin: 100px auto;
+  width: 95%;
+  max-width: 1100px;
   z-index: 1;
-  margin-left: 10%;
-  margin-right: 10%;
 }
 
 .title {
-  color: var(--color-text);
-  font-size: 35px;
+  color: #ffffff; /* título branco puro */
+  font-size: 38px;
   font-weight: 700;
   letter-spacing: 1.75px;
   text-transform: uppercase;
@@ -22,73 +19,79 @@
 .content {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 40px;
+  flex-wrap: wrap;
 }
 
-.aboutImage {
-  width: 35%;
-  border-radius: 20px;
-  margin: 40px;
-}
-
-.aboutItems {
+/* Metas */
+.goalsContainer {
+  flex: 1;
+  min-width: 300px;
+  max-width: 450px;
+  padding: 25px;
   color: var(--color-text);
+}
+
+/* Habilidades técnicas */
+.aboutItems {
+  flex: 1;
+  min-width: 300px;
+  max-width: 550px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 30px;
+  color: var(--color-text);
 }
 
-.aboutItem {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 20px;
-  list-style: none;
-  padding: 25px;
-  background-image: linear-gradient(
-    90deg,
-    rgba(165, 215, 232, 0.42) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  background-size: 0 100%;
-  background-repeat: no-repeat;
-  transition: 0.4s;
+/* Gráfico */
+.chartContainer {
+  margin-top: 25px;
+  text-align: center;
 }
 
-.aboutItem:hover {
-  background-size: 100% 100%;
+.chartContainer canvas {
+  max-width: 240px !important;
+  margin: 0 auto;
 }
 
-.aboutItem h3 {
-  font-size: 25px;
-  font-weight: 600;
-}
-
-.aboutItem p {
-  font-size: 25px;
-}
-
+/* Responsivo */
 @media screen and (max-width: 830px) {
   .container {
-    background-color: transparent;
-    padding-left: 0;
-    padding-right: 0;
+    width: 95%;
+    padding: 40px 20px;
   }
 
   .content {
     flex-direction: column;
+    gap: 50px;
   }
 
-  .aboutImage {
-    display: none;
-  }
-
+  .goalsContainer,
   .aboutItems {
-    margin-top: 29px;
+    width: 100%;
+    max-width: none;
   }
 
-  .aboutItem {
-    padding-left: 0;
-    padding-right: 0;
+  .chartContainer canvas {
+    max-width: 200px !important;
   }
 }
+
+.goalItem {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  gap: 10px;
+  color: var(--color-text);
+  margin-bottom: 12px; /* espaçamento entre os objetivos */
+}
+
+
+.checkbox {
+  width: 18px;
+  height: 18px;
+  accent-color: green;
+}
+
